# RedProxy.Server

./: .clang-format  CMakeLists.txt  README.md
Source/: Configuration.cpp  Configuration.h  Main.cpp  Server.cpp  Server.h  Types.h
Source/Common/: AddressResolve.h  Logger.h  Strings.cpp  Strings.h
Source/Session/: AbstractSession.cpp  AbstractSession.h
Source/Session/Socks4/: Socks4.cpp  Socks4.h  Socks4Types.h
Source/Session/Socks5/: Socks5.cpp  Socks5.h  Socks5Types.h
Source/Session/Socks5/Authentication/: AbstractAuth.h  NoAuth.cpp  NoAuth.h  UsernamePassword.cpp  UsernamePassword.h
